# violet

./: .gitignore  AUTHORS.md  Cargo.toml  DEPENDENCIES.md  LICENSE  NOTICE  NOTICE.md  README.md  build.zig  build.zig.zon  license  limine.cfg  limine.conf  makefile  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: dev-build.yml  fmt.yml  nightly-build.yml
basalt/: Cargo.toml  README.md  build.zig  build.zig.zon  linker.lds  readme.md  trusted_module.lds
basalt/src/: lib.rs  main.zig  root.zig
boot/: .gitignore  build.zig.zon  limine.cfg
bootloader/: build.zig  build.zig.zon
bootloader/src/: log.zig  main.zig  mmap.zig  phys.zig  virt.zig
drivers/pcie/: build.zig  build.zig.zon
forge/: Cargo.toml  limine.conf
forge/src/: build.rs  deps.rs  disk.rs  log.rs  main.rs  platform.rs  run.rs
genesis/: build.zig.zon
genesis/src/: main.zig
kernel/: .gitignore  Cargo.toml  aarch64-v8.2a-lse.json  aarch64-v8a.json  build.rs  build.zig  build.zig.zon  kernel.zig  kernel_std.zig  limine.zig  linker.lds  main.zig  makefile  types.zig  x86-64.json
kernel/aarch64/: arch.zig  kernel.ld  serial.zig  vmm.zig
kernel/arch/: arch.zig
kernel/boot/: boot.zig  limine.conf
kernel/linker/: aarch64.ld  riscv64.ld  x86_64.ld
kernel/mm/: pmm.zig
kernel/riscv64/: arch.zig  main.zig  serial.zig  spinlock.zig
kernel/source/: main.c
kernel/src/: exception.s  gic_v2.zig  kernel.zig  log.rs  main.rs  main.zig  root.zig  timer.zig
kernel/util/: bitmap.zig  (+1 more)
kernel_old/: kernel_std.zig  main.zig
system/: build.zig  build.zig.zon
(+151 files in other folders)
