[workspace]
members = [
    "basalt",
    "forge",
    "kernel",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["YiraSan <45128167+YiraSan@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/YiraSan/violet"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1 
debug = true 
overflow-checks = true 
panic = "abort" 
codegen-units = 256 
incremental = true
