[package]
name = "forge"
version = "0.1.0-dev.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
cargo_metadata = "0.23"
fatfs = "0.3"
gpt = "4.1"
ureq = "3.3"
escargot = "0.5"
anyhow = "1.0"
zip = "8.4"
owo-colors = "4.3.0"
